[project]
name = 'firehose'
version = '0.1.0.dev0'
description = 'A code generation tool'
readme = 'README.md'
authors = [ { name = 'IS4S', email = 'pntos@is4s.com' } ]
requires-python = '>=3.10'

dependencies = [
    # main branch, committed 9 April 2026
    'aspn @ git+https://github.com/Open-PNT/ASPN-ICD.git@49473ac21ff300d861f7266a9ca38c4fd2b7265a',
    'black==26.3.1',
    'cxxheaderparser==1.6.2',
    'isort',
    'lcm>=1,<2',
    'numpy>=2,<3',
    'pyyaml',
]

[dependency-groups]
dev = [
    'pip',
    'meson>=1,<1.10',
    "mypy>=1.9.0",
]

[tool.black]
line-length = 79
skip-magic-trailing-comma = true
skip-string-normalization = true
