[project]
name = 'firehose'
version = '0.1.0.dev0'
description = 'A code generation tool'
readme = 'README.md'
authors = [ { name = 'IS4S', email = 'pntos@is4s.com' } ]
requires-python = '>=3.10'

dependencies = [
    # dev branch, committed 6 May 2026
    'aspn @ git+https://github.com/Open-PNT/ASPN-ICD.git@3b16f06491039beeff32766e324180dd07e902b3',
    'black==26.3.1',
    # main branch, committed 2 May, 2022
    'cxxheaderparser @ git+https://github.com/robotpy/cxxheaderparser.git@ba4222560fc1040670b1a917d5d357198e8ec5d6',
    'isort',
    'lcm>=1,<2',
    'numpy>=2,<3',
    'pyyaml',
]

[dependency-groups]
dev = [
    'pip',
    'meson>=1,<1.10',
    'mypy>=1.9.0',
    'pybind11-stubgen>=2.5.5',
]

[tool.black]
line-length = 79
skip-magic-trailing-comma = true
skip-string-normalization = true
